# systers

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  config.example.yaml  dsg
docs/: AI_INSTRUCTIONS.md  CHANGELOG.md  REQUIREMENTS.md  SECURITY_EVALUATION.md  TODO.md
src/: collector.rs  config.rs  db.rs  lib.rs  main.rs  reporter.rs  system_checks.rs
tests/: collector_tests.rs  db_tests.rs  reporter_tests.rs
