[package]
name = "systers"
version = "0.3.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "syswriter"
path = "src/bin/syswriter.rs"

[[bin]]
name = "sysreport"
path = "src/bin/sysreport.rs"
